--- a/templates/group.tmpl
+++ b/templates/group.tmpl
@@ -22,7 +22,7 @@
 		{{- if .direct_access -}}
 			<div class="padding-wrapper">
 				<form method="POST" enctype="application/x-www-form-urlencoded">
-					<table class="rounded">
+					<table class="rounded-footed">
 						<thead>
 							<tr>
 								<th class="title-row" colspan="2">
