--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,7 @@
 
 /* Base styles and variables */
 html {
-	font-family: sans-serif;
+	font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif; /* Yes */
 	background-color: var(--background-color);
 	color: var(--text-color);
 	--radius-1: 0.32rem;
