Revert "Comic Sans"
This reverts commit 254b86d5f486605582f0f4640e046b4a7a0a9c30.

--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,7 @@
 
 /* Base styles and variables */
 html {
-	font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif; /* Yes */
+	font-family: sans-serif;
 	background-color: var(--background-color);
 	color: var(--text-color);
 	--radius-1: 0.32rem;
