Output git logs incrementally

--- a/templates/repo_index.tmpl
+++ b/templates/repo_index.tmpl
@@ -90,6 +90,9 @@
 								</td>
 							</tr>
 						{{- end -}}
+						{{- if dereference_error .commits_err -}}
+							Error while obtaining commit log: {{ .commits_err }}
+						{{- end -}}
 					</tbody>
 				</table>
 			</div>
