--- a/templates/repo_index.tmpl
+++ b/templates/repo_index.tmpl
@@ -102,7 +102,7 @@
 				<table id="file-tree" class="wide rounded">
 					<thead>
 						<tr class="title-row">
-							<th colspan="3">/{{- if .ref_name -}} on {{- .ref_name -}}{{- end -}}</th>
+							<th colspan="3">/{{- if .ref_name }} on {{ .ref_name -}}{{- end -}}</th>
 						</tr>
 						<tr>
 							<th scope="col">Mode</th>
