--- a/templates/451.tmpl
+++ b/templates/451.tmpl
@@ -2,17 +2,17 @@
 	SPDX-License-Identifier: AGPL-3.0-only
 	SPDX-FileContributor: Runxi Yu <https://runxiyu.org>
 */}}
-{{- define "400" -}}
+{{- define "451" -}}
 <!DOCTYPE html>
 <html lang="en">
 	<head>
 		{{- template "head_common" . -}}
-		<title>400 Bad Request &ndash; {{ .global.forge_title }}</title>
+		<title>451 Unavailable For Legal Reasons &ndash; {{ .global.forge_title }}</title>
 	</head>
-	<body class="400">
+	<body class="451">
 		{{- template "header" . -}}
 		<div class="padding-wrapper complete-error-page">
-			<h1>400 Bad Request</h1>
+			<h1>451 Unavailable For Legal Reasons</h1>
 			<p>{{- .complete_error_msg -}}</p>
 			<hr />
 			<address>Lindenii Forge</address>
