Cache commit logs on the repo index page

--- a/templates/repo_contrib_one.tmpl
+++ b/templates/repo_contrib_one.tmpl
@@ -41,7 +41,7 @@
 					</tr>
 					<tr>
 						<th scope="row">Merge base</th>
-						<td>{{- .merge_base.ID.String -}}</td>
+						<td>{{- .merge_base.Hash.String -}}</td>
 					</tr>
 				</tbody>
 			</table>
