--- a/templates/group.tmpl
+++ b/templates/group.tmpl
@@ -13,7 +13,7 @@
 	<body class="group">
 		{{- template "header" . -}}
 		<div class="padding-wrapper">
-			<p>{{- range $i, $s := .group_path -}}{{- $s -}}{{- if ne $i (len $group_path) }} / {{ end -}}{{- end -}}
+			<p>{{- range $i, $s := .group_path -}}{{- $s -}}{{- if ne $i (minus (len $group_path) 1) }} / {{ end -}}{{- end -}}
 			{{- if .description -}}
 			<p>{{- .description -}}</p>
 			{{- end -}}
