Further remove .rounded and .rounded-footed

--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -12,7 +12,7 @@
 	<body class="index">
 		{{- template "header" . -}}
 		<div class="padding-wrapper">
-		<table class="wide rounded">
+		<table class="wide">
 			<thead>
 				<tr>
 					<th colspan="2" class="title-row">Groups</th>
@@ -36,7 +36,7 @@
 			</tbody>
 		</table>
 		<div class="padding-wrapper">
-			<table class="wide rounded">
+			<table class="wide">
 				<thead>
 					<tr>
 						<th colspan="2" class="title-row">
