--- a/templates/repo_log.tmpl
+++ b/templates/repo_log.tmpl
@@ -12,7 +12,7 @@
 	<body class="repo-log">
 		{{- template "header" . -}}
 		<div class="scroll">
-			<table id="commits" class="wide rounded">
+			<table id="commits" class="wide">
 				<thead>
 					<tr class="title-row">
 						<th colspan="4">Commits {{ if .ref_name }} on {{ .ref_name }}{{ end -}}</th>
