--- a/templates/repo_index.tmpl
+++ b/templates/repo_index.tmpl
@@ -35,7 +35,7 @@
 			</div>
 		</div>
 		<div class="padding-wrapper">
-			<table id="branches" class="rounded">
+			<table id="branches">
 				<thead>
 					<tr class="title-row">
 						<th colspan="1">Branches</th>
@@ -59,7 +59,7 @@
 		</div>
 		{{- if .commits -}}
 			<div class="padding-wrapper scroll">
-				<table id="recent-commits" class="wide rounded">
+				<table id="recent-commits" class="wide">
 					<thead>
 						<tr class="title-row">
 							<th colspan="3">Recent commits (<a href="log/{{- if .ref_type -}}?{{- .ref_type -}}={{- .ref_name -}}{{- end -}}">see all</a>)</th>
@@ -91,7 +91,7 @@
 		{{- end -}}
 		{{- if .files -}}
 			<div class="padding-wrapper scroll">
-				<table id="file-tree" class="wide rounded">
+				<table id="file-tree" class="wide">
 					<thead>
 						<tr class="title-row">
 							<th colspan="3">/{{- if .ref_name }} on {{ .ref_name -}}{{- end -}}</th>
