--- a/templates/repo_index.tmpl
+++ b/templates/repo_index.tmpl
@@ -12,6 +12,28 @@
 	<body class="repo-index">
 		{{- template "header" . -}}
 		<div class="padding-wrapper">
+			<ul class="nav-tabs-standalone">
+				<li class="nav-item">
+					<a class="nav-link" href="./">Summary</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link " href="tree/">Tree</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link " href="log/">Log</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link " href="branches/">Branches</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link " href="tags/">Tags</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link " href="settings/">Settings</a>
+				</li>
+			</ul>
+		</div>
+		<div class="padding-wrapper">
 			<div class="key-val-grid-wrapper">
 				<section id="repo-info" class="key-val-grid">
 					<div class="title-row">Repo info</div>
