--- a/templates/repo_index.tmpl
+++ b/templates/repo_index.tmpl
@@ -13,23 +13,23 @@
 		{{- template "header" . -}}
 		<div class="padding-wrapper">
 			<ul class="nav-tabs-standalone">
-				<li class="nav-item">
+				<li class="nav-item active">
 					<a class="nav-link" href="./">Summary</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link " href="tree/">Tree</a>
+					<a class="nav-link" href="tree/">Tree</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link " href="log/">Log</a>
+					<a class="nav-link" href="log/">Log</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link " href="branches/">Branches</a>
+					<a class="nav-link" href="branches/">Branches</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link " href="tags/">Tags</a>
+					<a class="nav-link" href="tags/">Tags</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link " href="settings/">Settings</a>
+					<a class="nav-link" href="settings/">Settings</a>
 				</li>
 			</ul>
 		</div>
