Add repo tab navigation to all pages

--- a/templates/repo_tree_file.tmpl
+++ b/templates/repo_tree_file.tmpl
@@ -14,6 +14,26 @@
 	<body class="repo-tree-file">
 		{{- template "header" . -}}
 		<div class="padding">
+			<ul class="nav-tabs-standalone">
+				<li class="nav-item">
+					<a class="nav-link" href="../{{- template "ref_query" $root -}}">Summary</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="../tree/{{- template "ref_query" $root -}}">Tree</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../log/{{- template "ref_query" $root -}}">Log</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../branches/">Branches</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../tags/">Tags</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../settings/">Settings</a>
+				</li>
+			</ul>
 			<p>
 				/{{ .path_spec }} (<a href="/{{ template "group_path_plain" .group_path }}/:/repos/{{ .repo_name }}/raw/{{ .path_spec }}{{- template "ref_query" $root -}}">raw</a>)
 			</p>
