--- a/templates/repo_log.tmpl
+++ b/templates/repo_log.tmpl
@@ -3,6 +3,7 @@
 	SPDX-FileContributor: Runxi Yu <https://runxiyu.org>
 */}}
 {{- define "repo_log" -}}
+{{- $root := . -}}
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -11,6 +12,26 @@
 	</head>
 	<body class="repo-log">
 		{{- template "header" . -}}
+		<ul class="nav-tabs-standalone">
+			<li class="nav-item">
+				<a class="nav-link" href="../{{- template "ref_query" $root -}}">Summary</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="../tree/{{- template "ref_query" $root -}}">Tree</a>
+			</li>
+			<li class="nav-item active">
+				<a class="nav-link" href="../log/{{- template "ref_query" $root -}}">Log</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="../branches/">Branches</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="../tags/">Tags</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="../settings/">Settings</a>
+			</li>
+		</ul>
 		<div class="scroll">
 			<table id="commits" class="wide">
 				<thead>
