--- a/templates/repo_raw_dir.tmpl
+++ b/templates/repo_raw_dir.tmpl
@@ -13,6 +13,26 @@
 	<body class="repo-raw-dir">
 		{{- template "header" . -}}
 		<div class="padding-wrapper scroll">
+			<ul class="nav-tabs-standalone">
+				<li class="nav-item">
+					<a class="nav-link" href="../{{- template "ref_query" $root -}}">Summary</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../tree/{{- template "ref_query" $root -}}">Tree</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../log/{{- template "ref_query" $root -}}">Log</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../branches/">Branches</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../tags/">Tags</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../settings/">Settings</a>
+				</li>
+			</ul>
 			<table id="file-tree" class="wide">
 				<thead>
 					<tr class="title-row">
