--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,15 @@
  * SPDX-License-Identifier: AGPL-3.0-only
  * SPDX-FileContributor: Runxi Yu <https://runxiyu.org>
  * SPDX-FileContributor: luk3yx <https://luk3yx.github.io>
+ * SPDX-FileContributor: Drew DeVault <https://drewdevault.com>
+ *
+ * Drew did not directly contribute here but we took significant portions of
+ * SourceHut's CSS.
  */
+
+* {
+	box-sizing: border-box;
+}
 
 /* Base styles and variables */
 html {
@@ -90,14 +98,8 @@ footer a:link, footer a:visited {
 	color: inherit;
 }
 
-/* Padding containers */
-.padding-wrapper {
-	margin: 1rem auto;
-	max-width: 60rem;
-	padding: 0 5px;
-}
 .padding {
-	padding: 0 5px;
+	padding: 0 1rem;
 }
 
 /* Link styles */
@@ -351,7 +353,8 @@ header#main-header {
 	align-items: center;
 	justify-content: space-between;
 	flex-wrap: wrap;
-	padding: 0.625rem 1rem;
+	padding-top: 1rem;
+	padding-bottom: 1rem;
 	gap: 0.5rem;
 }
 #main-header a, #main-header a:link, main-header a:visited {
@@ -501,19 +504,66 @@ td > ul {
 	flex-wrap: nowrap;
 	padding: 0;
 	border-bottom: 0.25rem var(--darker-box-background-color) solid;
+	width: 100%;
+	max-width: 100%;
+	min-width: 100%;
 }
 
-.nav-tabs-standalone li {
+.nav-tabs-standalone > li {
 	align-self: flex-end;
+}
+.nav-tabs-standalone > li > a {
 	padding: 0 1rem;
 }
 
-.nav-item.active {
-	font-weigt: bold;
+.nav-item a.active {
 	background-color: var(--darker-box-background-color);
 }
 
 .nav-item a, .nav-item a:link, .nav-item a:visited {
 	text-decoration: none;
 	color: inherit;
+}
+
+.repo-header-extension {
+	margin-bottom: 1rem;
+	background-color: var(--darker-box-background-color);
+}
+
+.repo-header > h2 {
+	display: inline;
+	margin: 0;
+	padding-right: 1rem;
+}
+
+.repo-header > .nav-tabs-standalone {
+	border: none;
+  margin: 0;
+  flex-grow: 1;
+  display: inline-flex;
+  flex-wrap: nowrap;
+  padding: 0;
+}
+
+.repo-header {
+	display: flex;
+	flex-wrap: nowrap;
+}
+
+.repo-header-extension-content {
+	padding-top: 0.3rem;
+	padding-bottom: 0.2rem;
+}
+
+.repo-header, .padding-wrapper, .repo-header-extension-content, #main-header {
+	padding-left: 1rem;
+	padding-right: 1rem;
+	max-width: 60rem;
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.padding-wrapper {
+	margin-bottom: 1rem;
 }
