--- a/templates/repo_contrib_one.tmpl
+++ b/templates/repo_contrib_one.tmpl
@@ -3,6 +3,7 @@
 	SPDX-FileContributor: Runxi Yu <https://runxiyu.org>
 */}}
 {{- define "repo_contrib_one" -}}
+{{- $root := . -}}
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -11,6 +12,37 @@
 	</head>
 	<body class="repo-contrib-one">
 		{{- template "header" . -}}
+		<div class="repo-header">
+			<h2>{{- .repo_name -}}</h2>
+			<ul class="nav-tabs-standalone">
+				<li class="nav-item">
+					<a class="nav-link" href="../{{- template "ref_query" $root -}}">Summary</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../tree/{{- template "ref_query" $root -}}">Tree</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../log/{{- template "ref_query" $root -}}">Log</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../branches/">Branches</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../tags/">Tags</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link active" href="../contrib/">Merge requests</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../settings/">Settings</a>
+				</li>
+			</ul>
+		</div>
+		<div class="repo-header-extension">
+			<div class="repo-header-extension-content">
+				{{- .repo_description -}}
+			</div>
+		</div>
 		<div class="padding-wrapper">
 			<table id="mr-info-table">
 				<thead>
