--- a/templates/repo_log.tmpl
+++ b/templates/repo_log.tmpl
@@ -12,26 +12,37 @@
 	</head>
 	<body class="repo-log">
 		{{- template "header" . -}}
-		<ul class="nav-tabs-standalone">
-			<li class="nav-item">
-				<a class="nav-link" href="../{{- template "ref_query" $root -}}">Summary</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="../tree/{{- template "ref_query" $root -}}">Tree</a>
-			</li>
-			<li class="nav-item active">
-				<a class="nav-link" href="../log/{{- template "ref_query" $root -}}">Log</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="../branches/">Branches</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="../tags/">Tags</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="../settings/">Settings</a>
-			</li>
-		</ul>
+		<div class="repo-header">
+			<h2>{{- .repo_name -}}</h2>
+			<ul class="nav-tabs-standalone">
+				<li class="nav-item">
+					<a class="nav-link" href="../{{- template "ref_query" $root -}}">Summary</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../tree/{{- template "ref_query" $root -}}">Tree</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link active" href="../log/{{- template "ref_query" $root -}}">Log</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../branches/">Branches</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../tags/">Tags</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../contrib/">Merge requests</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../settings/">Settings</a>
+				</li>
+			</ul>
+		</div>
+		<div class="repo-header-extension">
+			<div class="repo-header-extension-content">
+				{{- .repo_description -}}
+			</div>
+		</div>
 		<div class="scroll">
 			<table id="commits" class="wide">
 				<thead>
