--- a/templates/repo_tree_dir.tmpl
+++ b/templates/repo_tree_dir.tmpl
@@ -12,13 +12,14 @@
 	</head>
 	<body class="repo-tree-dir">
 		{{- template "header" . -}}
-		<div class="padding-wrapper scroll">
+		<div class="repo-header">
+			<h2>{{- .repo_name -}}</h2>
 			<ul class="nav-tabs-standalone">
 				<li class="nav-item">
 					<a class="nav-link" href="../{{- template "ref_query" $root -}}">Summary</a>
 				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="../tree/{{- template "ref_query" $root -}}">Tree</a>
+				<li class="nav-item">
+					<a class="nav-link active" href="../tree/{{- template "ref_query" $root -}}">Tree</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="../log/{{- template "ref_query" $root -}}">Log</a>
@@ -30,9 +31,19 @@
 					<a class="nav-link" href="../tags/">Tags</a>
 				</li>
 				<li class="nav-item">
+					<a class="nav-link" href="../contrib/">Merge requests</a>
+				</li>
+				<li class="nav-item">
 					<a class="nav-link" href="../settings/">Settings</a>
 				</li>
 			</ul>
+		</div>
+		<div class="repo-header-extension">
+			<div class="repo-header-extension-content">
+				{{- .repo_description -}}
+			</div>
+		</div>
+		<div class="padding-wrapper scroll">
 			<table id="file-tree" class="wide">
 				<thead>
 					<tr class="title-row">
