Unify spelling of Author date

--- a/templates/repo_index.tmpl
+++ b/templates/repo_index.tmpl
@@ -61,7 +61,7 @@
 						<tr>
 							<th scope="col">Title</th>
 							<th scope="col">Author</th>
-							<th scope="col">Author Date</th>
+							<th scope="col">Author date</th>
 						</tr>
 					</thead>
 					<tbody>
