--- a/templates/repo_log.tmpl
+++ b/templates/repo_log.tmpl
@@ -53,7 +53,7 @@
 						<th scope="col">ID</th>
 						<th scope="col">Title</th>
 						<th scope="col">Author</th>
-						<th scope="col">Time</th>
+						<th scope="col">Author date</th>
 					</tr>
 				</thead>
 				<tbody>
