Replace FileContributor with FileCopyrightText

--- a/static/chroma.css
+++ b/static/chroma.css
@@ -1,6 +1,6 @@
 /*
  * SPDX-License-Identifier: MIT AND BSD-2-Clause
- * SPDX-FileContributor: Pygments and Chroma authors
+ * SPDX-FileCopyrightText: Copyright (c) 2018-2025 Pygments and Chroma authors
  */
 
 @media (prefers-color-scheme: light) {
