--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,8 @@
 /*
  * SPDX-License-Identifier: AGPL-3.0-only
- * SPDX-FileContributor: Runxi Yu <https://runxiyu.org>
- * SPDX-FileContributor: luk3yx <https://luk3yx.github.io>
- * SPDX-FileContributor: Drew DeVault <https://drewdevault.com>
+ * SPDX-FileCopyrightText: Copyright (c) 2025 Runxi Yu <https://runxiyu.org>
+ * SPDX-FileCopyrightText: Copyright (c) 2025 luk3yx <https://luk3yx.github.io>
+ * SPDX-FileCopyrightText: Copyright (c) 2017-2025 Drew DeVault <https://drewdevault.com>
  *
  * Drew did not directly contribute here but we took significant portions of
  * SourceHut's CSS.
