--- a/templates/501.tmpl
+++ b/templates/501.tmpl
@@ -1,6 +1,6 @@
 {{/*
 	SPDX-License-Identifier: AGPL-3.0-only
-	SPDX-FileContributor: Runxi Yu <https://runxiyu.org>
+	SPDX-FileCopyrightText: Copyright (c) 2025 Runxi Yu <https://runxiyu.org>
 */}}
 {{- define "501" -}}
 <!DOCTYPE html>
