--- a/templates/repo_contrib_index.tmpl
+++ b/templates/repo_contrib_index.tmpl
@@ -51,8 +51,8 @@
 					</tr>
 				</thead>
 				<tr>
-					<th scope="col">Name</th>
-					<th scope="col">Description</th>
+					<th scope="col">ID</th>
+					<th scope="col">Title</th>
 					<th scope="col">Status</th>
 				</tr>
 				<tbody>
