Change /: in templates
Probably more nasty ones to come

--- a/templates/_group_view.tmpl
+++ b/templates/_group_view.tmpl
@@ -43,7 +43,7 @@
 		{{- range .repos -}}
 			<tr>
 				<td>
-					<a href=":/repos/{{- .Name | path_escape -}}/">{{- .Name -}}</a>
+					<a href="-/repos/{{- .Name | path_escape -}}/">{{- .Name -}}</a>
 				</td>
 				<td>
 					{{- .Description -}}
