--- a/templates/_footer.tmpl
+++ b/templates/_footer.tmpl
@@ -5,7 +5,7 @@
 {{- define "footer" -}}
 <a href="https://lindenii.runxiyu.org/forge/">Lindenii Forge</a>
 {{ .global.forge_version }}
-(<a href="/:/source/source.tar.gz">source</a>,
-<a href="https://forge.lindenii.runxiyu.org/forge/:/repos/server/">upstream</a>,
-<a href="/:/source/LICENSE">license</a>)
+(<a href="/-/source/source.tar.gz">source</a>,
+<a href="https://forge.lindenii.runxiyu.org/forge/-/repos/server/">upstream</a>,
+<a href="/-/source/LICENSE">license</a>)
 {{- end -}}
