--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -54,7 +54,7 @@
 					</tr>
 					<tr>
 						<th scope="row">Memory usage</th>
-						<td>Allocated {{ .mem }} <a href="/:/gc/" class="btn btn-danger">Run the garbage collector</a></td>
+						<td>Allocated {{ .mem }} <a href="/-/gc/" class="btn btn-danger">Run the garbage collector</a></td>
 					</tr>
 				</tbody>
 			</table>
