HTML: Branches should link to a summary of that branch

--- a/templates/repo_branches.tmpl
+++ b/templates/repo_branches.tmpl
@@ -54,7 +54,7 @@
 					{{- range .branches -}}
 					<tr>
 						<td>
-							<a href="./?branch={{ . }}">{{ . }}</a>
+							<a href="../?branch={{ . }}">{{ . }}</a>
 						</td>
 					</tr>
 					{{- end -}}
